# pste

./: .editorconfig  .env.default  .flaskenv  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  alembic.ini  manage.py  package.json  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build-docker-image.yml  ci.yml  docker.yml  lint.yml
app/: __init__.py  commands.py  security.py  settings.py  utils.py
app/commands/: __init__.py  user.py
app/forms/: __init__.py  api.py  auth.py
app/models/: __init__.py  file.py  user.py
app/settings/: __init__.py  default.py
app/static/css/: app.css  code.css  theme.css
app/static/css/pygments/: github.css
app/static/js/: dropzone.js
app/static/starwars-glyphicons/css/: starwars-glyphicons.css
app/templates/: base.html
app/templates/auth/: _form.html  login.html  register.html
app/templates/errors/: 404.html
app/templates/flask_user/: _macros.html  base.html  change_password.html  edit_user_profile.html  forgot_password.html  invite_user.html  login.html  register.html  resend_confirm_email.html  reset_password.html
app/templates/main/: index.html  paste.html
app/views/: __init__.py  api.py  auth.py  web.py
config/: .env  default.toml  logging.yml
config/default/: config.yml  logging.yml  settings.yml
docker/: .env.example  docker-compose.dev.yml
docker/entrypoint.d/: 10-config.sh  20-fix-perms.sh  30-migrate-db.sh  40-build-assets.sh  50-start.sh
docker/healthcheck.d/: 10-index.sh
docker/rootfs/: docker-entrypoint.sh  docker-healthcheck.sh
docker/rootfs/etc/cont-init.d/: 10-config  20-fix-perms  30-migrate-db  40-assets
docker/rootfs/etc/services.d/app/: run
migrations/versions/: 035a55e15cc4_.py  0951a9dc44fc_.py  13f083bf9ff9_.py  2a006fa06649_.py  3e979ee73d6e_.py  49eb8040e457_.py  4eaa692b46c2_.py  865b3f0bb601_.py
pste/: __init__.py  config.py  extensions.py  meta.py  paths.py  security.py  settings.py  utils.py  version.py
pste/assets/: assets.yml
pste/assets/css/: starwars-glyphicons.css
pste/assets/js/: app.js
pste/assets/scss/: app.scss
pste/commands/: __init__.py  file.py  user.py
pste/db/migrations/: env.py
pste/db/migrations/versions/: 2a006fa06649_.py  4eaa692b46c2_.py  7039aecf71a9_.py  8693eef67ac6_update_indexes.py
pste/forms/: api.py  auth.py
pste/migrations/: __init__.py  alembic.ini  env.py
pste/migrations/versions/: 2a006fa06649_.py  4eaa692b46c2_.py  7039aecf71a9_.py  __init__.py  abca934671bf_.py
pste/models/: __init__.py  file.py  user.py
pste/resources/config/: settings.toml  settings.yml
pste/static/css/: app.css
pste/static/js/: dropzone.js
pste/templates/: base.html
pste/templates/auth/: _form.html  login.html  register.html
pste/templates/errors/: 404.html
pste/templates/main/: index.html  paste.html
pste/views/: __init__.py  api.py  auth.py  web.py
