[project]
name = "pste"
description = "Just a simple file hosting application inspired by the likes of pomf.se and teknik.io."
authors = [{ name = "Lee Watson", email = "<me@lwatson.dev>" }]
version = "0.9.3"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12, <3.13"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
flask = "^3.0.0"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.0.0"
flask-assets = "^2.0"
libsass = "^0.23.0"
cssmin = "^0.2.0"
dynaconf = { version = "^3.2.4", extras = ["yaml"] }
passlib = { extras = ["argon2"], version = "^1.7.0" }
python-magic = "^0.4.0"
humanize = "^4.9.0"
pygments = "^2.7.0"
sentry-sdk = { extras = ["flask"], version = "^2.8.0" }
psycopg = "^3.1.18"
gunicorn = { version = "^23.0.0", extras = ["gevent"] }
email_validator = "^2.1.0"
python-dotenv = "^1.0.1"
python-box = "^7.1.1"
Flask-Session = "^0.7.0"
flask-db = "^0.4.1"
redis = { extras = ["hiredis"], version = "^5.0.3" }

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
Flask-DebugToolbar = "^0.14.0"
ruff = "^0.9.0"
pre-commit-hooks = "^5.0.0"
shellcheck-py = "^0.10.0.1"

[tool.ruff]
force-exclude = true
extend-exclude = ["data/"]

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "DTZ",
    "E",
    "ERA",
    "F",
    "FIX",
    "FURB",
    "I",
    "N",
    "PL",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TID",
    "UP",
    "W",
    "YTT",
]

# ruff format compatibility
ignore = ["E501"]

[tool.ruff.lint.extend-per-file-ignores]
"pste/db/migrations/*" = ["ERA001", "ARG001"]

[tool.ruff.format]
line-ending = "lf"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
