[project]
name = "pste"
description = "Just a simple file hosting application inspired by the likes of pomf.se and teknik.io."
authors = [{ name = "Lee Watson", email = "me@lwatson.dev" }]
version = "0.9.3"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13,<3.14"
dependencies = [
    "flask (>=3.0.0,<4.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "gunicorn[gevent] (>=23.0.0,<24.0.0)",
    "cssmin (>=0.2.0,<1.0.0)",
    "libsass (>=0.23.0,<1.0.0)",
    "flask-db (>=0.4.0,<1.0.0)",
    "dynaconf[yaml] (>=3.2.4,<4.0.0)",
    "sentry-sdk[flask] (>=2.8.0,<3.0.0)",
    "flask-login (>=0.6.3,<1.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-wtf (>=1.0.0,<2.0.0)",
    "flask-assets (>=2.0,<3.0)",
    "flask-session (>=0.7.0,<1.0.0)",
    "passlib[argon2] (>=1.7.0,<2.0.0)",
    "python-magic (>=0.4.0,<1.0.0)",
    "humanize (>=4.9.0,<5.0.0)",
    "pygments (>=2.7.0,<3.0.0)",
    "psycopg (>=3.1.18,<4.0.0)",
    "email_validator (>=2.1.0,<3.0.0)",
    "python-box (>=7.1.1,<8.0.0)",
    "redis[hiredis] (>=5.0.3,<6.0.0)",
]

[dependency-groups]
dev = [
    "pre-commit (>=4.0.0,<5.0.0)",
    "pre-commit-hooks (>=5.0.0,<6.0.0)",
    "ruff (>=0.9.0,<1.0.0)",
    "shellcheck-py (>=0.10.0.1)",
    "flask-debugtoolbar (>=0.14.0,<1.0.0)",
]

[tool.ruff]
force-exclude = true
extend-exclude = ["data/"]

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "DTZ",
    "E",
    "ERA",
    "F",
    "FIX",
    "FURB",
    "I",
    "N",
    "PL",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TID",
    "UP",
    "W",
    "YTT",
]

# ruff format compatibility
ignore = ["E501"]

[tool.ruff.lint.extend-per-file-ignores]
"pste/db/migrations/*" = ["ERA001", "ARG001"]

[tool.ruff.format]
line-ending = "lf"
